<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        app:cnb_iconColor="@color/home_color"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/exploreFragment"
        android:title="@string/explore"
        app:cnb_iconColor="@color/explore_color"
        android:icon="@drawable/ic_explore"/>

    <item android:id="@+id/mangaFragment"
        android:title="@string/manga"
        app:cnb_iconColor="@color/manga_color"
        android:icon="@drawable/ic_book"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        app:cnb_iconColor="@color/Profile_color"
        android:icon="@drawable/ic_person"/>

</menu>