<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_topBar"
            style="@style/TopActionBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/anime_image"
        android:scaleType="centerCrop"
        android:src="@drawable/action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage_newTweet"
        style="@style/ImageBorder"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@color/gray"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage_newTweet"
        app:layout_constraintEnd_toEndOf="@+id/profileImage_newTweet"
        app:layout_constraintStart_toStartOf="@+id/profileImage_newTweet"
        app:layout_constraintTop_toTopOf="@+id/profileImage_newTweet"
        app:tint="@color/red" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        style="@style/Icon"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:contentDescription="@string/my_list" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_share"
        style="@style/Icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:contentDescription="@string/share" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage_newTweet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView"
                style="@style/SecondaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:text="@string/anime_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/QuaternaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/action_drama"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/ic_star" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/ic_star" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/QuaternaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/TertiaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/_2000"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/QuaternaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/episodes"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/TertiaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/_12"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/QuaternaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/TertiaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/_23_min"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/character_detail"
                style="@style/SecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/characters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <ImageView
                android:id="@+id/characterMore_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Icon"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/characters"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/character_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/character_detail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_characters_details"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_detail"
                tools:listitem="@layout/anime_item" />

            <TextView
                android:id="@+id/similarAnime_detail"
                style="@style/SecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/similar_anime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_characters_details" />

            <ImageView
                android:id="@+id/similarAnimeMore_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Icon"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/characters"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/similarAnime_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/similarAnime_detail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_similarAnime_details"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similarAnime_detail"
                tools:listitem="@layout/anime_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>