<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MangaDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mangaNameMangaDetails"
                style="@style/PrimaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mangaNameMangaDetails">

                <ImageView
                    android:id="@+id/animeImageMangaDetail"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/anime_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img3" />

            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/addToList_manga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Icon"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@+id/categoriesMangaDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categoriesMangaDetails"
                android:contentDescription="@string/add" />

            <ImageView
                android:id="@+id/share_manga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Icon"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@+id/categoriesMangaDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categoriesMangaDetails" />

            <TextView
                android:id="@+id/categoriesMangaDetails"
                style="@style/QuaternaryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/share_manga"
                app:layout_constraintStart_toEndOf="@+id/addToList_manga"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoriesMangaDetails">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/QuaternaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chapters"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/chapters"
                            style="@style/TertiaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_2000"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/QuaternaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/author"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/author"
                            style="@style/TertiaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_23_min"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/QuaternaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/volumes"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/volumes"
                            style="@style/TertiaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/_12"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/txt_synopsis"
                style="@style/SecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/descriptionMangaDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/QuaternaryText"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="10"
                android:text="@string/lorem_ipsum"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_synopsis" />

            <TextView
                android:id="@+id/charactersMangaDetail"
                style="@style/SecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/characters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionMangaDetails" />

            <ImageView
                android:id="@+id/charactersMoreMangaDetails"
                style="@style/Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/more"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/charactersMangaDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/charactersMangaDetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_charactersMangaDetails"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/charactersMangaDetail"
                tools:listitem="@layout/anime_item" />

            <TextView
                android:id="@+id/similarMangaDetail"
                style="@style/SecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/more_like_this"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_charactersMangaDetails" />

            <ImageView
                android:id="@+id/similarMoreMangaDetails"
                style="@style/Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/more"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/similarMangaDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/similarMangaDetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_similarMangaDetails"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/similarMangaDetail"
                tools:listitem="@layout/anime_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>